--- a/src/main/resources/fxml/Admin/CreateClient.fxml
+++ b/src/main/resources/fxml/Admin/CreateClient.fxml
@@ -8,31 +8,26 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="create_client_container"
-            stylesheets="@../Styles/CreateClient.css" xmlns="http://javafx.com/javafx/19"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.mazebank.Controllers.Admin.CreateClientController">
-   <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create New Client Account"/>
-   <VBox layoutX="14.0" layoutY="58.0" prefHeight="700.0" prefWidth="600.0" AnchorPane.leftAnchor="14.0"
-         AnchorPane.topAnchor="40.0">
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:"/>
-      <TextField fx:id="fName_fld"/>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:"/>
-      <TextField fx:id="lName_fld"/>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:"/>
-      <TextField fx:id="password_fld"/>
-      <Text layoutX="10.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Payee Address:"/>
-      <CheckBox fx:id="pAddress_box" mnemonicParsing="false"/>
-      <Label fx:id="pAddress_lbl" styleClass="payee_address_lbl"/>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Accounts"/>
-      <CheckBox fx:id="ch_acc_box" mnemonicParsing="false" text="Add Checking Account"/>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Checking Account Balance:"/>
-      <TextField fx:id="ch_amount_fld"/>
-      <CheckBox fx:id="sv_acc_box" mnemonicParsing="false" text="Add Savings Account"/>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Savings Account Balance:"/>
-      <TextField fx:id="sv_amount_fld"/>
-      <Button fx:id="create_client_btn" mnemonicParsing="false" text="Create New Client"/>
-      <Label fx:id="error_lbl" styleClass="error_lbl" text="error:"/>
+<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="create_client_container" stylesheets="@../Styles/CreateClient.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.Admin.CreateClientController">
+   <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create New Client Account" />
+   <VBox layoutX="14.0" layoutY="58.0" prefHeight="700.0" prefWidth="600.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="40.0">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:" />
+      <TextField fx:id="fName_fld" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:" />
+      <TextField fx:id="lName_fld" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" />
+      <TextField fx:id="password_fld" />
+      <Text layoutX="10.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Payee Address:" />
+      <CheckBox fx:id="pAddress_box" mnemonicParsing="false" />
+      <Label fx:id="pAddress_lbl" styleClass="payee_address_lbl" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Accounts" />
+      <CheckBox fx:id="ch_acc_box" mnemonicParsing="false" text="Add Checking Account" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Checking Account Balance:" />
+      <TextField fx:id="ch_amount_fld" />
+      <CheckBox fx:id="sv_acc_box" mnemonicParsing="false" text="Add Savings Account" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Savings Account Balance:" />
+      <TextField fx:id="sv_amount_fld" />
+      <Button fx:id="create_client_btn" mnemonicParsing="false" text="Create New Client" />
+      <Label fx:id="error_lbl" styleClass="error_lbl" text="error:" />
    </VBox>
 </AnchorPane>
