--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="login_container" stylesheets="@Styles/login.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.LoginController">
    <VBox prefHeight="400.0" prefWidth="200.0" styleClass="login_logo_container" stylesheets="@Styles/login.css"
          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -20,7 +21,7 @@
       <Label fx:id="username" text="Payee Adress" />
       <TextField fx:id="input_username" styleClass="input_field" />
       <Label fx:id="password" text="Password" />
-      <TextField fx:id="input_password" styleClass="input_field" />
+      <PasswordField fx:id="input_password" styleClass="input_field" />
       <Button fx:id="login_button" mnemonicParsing="false" text="Login" />
       <Label fx:id="error_label" styleClass="error_lbl" />
    </VBox>
