--- a/src/main/resources/fxml/Admin/Deposit.fxml
+++ b/src/main/resources/fxml/Admin/Deposit.fxml
@@ -11,16 +11,16 @@
 <AnchorPane prefHeight="750.0" prefWidth="850.0" stylesheets="@../Styles/Deposit.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.Admin.DepositController">
    <VBox layoutX="15.0" layoutY="137.0" prefHeight="570.0" prefWidth="820.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="100.0">
       <HBox alignment="CENTER" prefHeight="60.0" prefWidth="820.0" styleClass="search_box">
-         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search By Payee Address:" />
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Suche über Payee Address:" />
          <TextField fx:id="pAddress_fld" />
-         <Button fx:id="serch_btn" mnemonicParsing="false" text="Search" />
+         <Button fx:id="serch_btn" mnemonicParsing="false" text="Suche" />
       </HBox>
       <ListView fx:id="result_listview" prefHeight="200.0" prefWidth="820.0" styleClass="search_box" />
       <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="315.0" prefWidth="100.0" styleClass="deposit_box">
-         <Text disable="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Deposit Section" textAlignment="CENTER" />
-         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Amount:" />
+         <Text disable="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Einzahlungs Sektion" textAlignment="CENTER" />
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Summe:" />
          <TextField fx:id="amount_fld" />
-         <Button fx:id="deposit_btn" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Deposit" />
+         <Button fx:id="deposit_btn" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Einzahlen" />
       </VBox>
    </VBox>
 </AnchorPane>
