--- a/src/main/resources/fxml/Client/Dashboard.fxml
+++ b/src/main/resources/fxml/Client/Dashboard.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="dashboard" stylesheets="@../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.Client.DashboardController">
+<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="dashboard" stylesheets="@../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.Client.DashboardController">
    <Text fx:id="user_name" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="user_name" text="Hi, User" />
    <Label fx:id="login_date" layoutX="460.0" layoutY="31.0" styleClass="date_lbl" text="Heute, 6.5.2023" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="30.0" />
    <Text layoutX="811.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Accounts Summary" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="90.0" />
@@ -21,8 +21,7 @@
          <Label fx:id="cheking_bal" layoutX="24.0" layoutY="14.0" styleClass="account_balance" text="35 000,00 €" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="25.0" />
          <Label layoutX="14.0" layoutY="113.0" styleClass="account_number" text="**** **** ****" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="14.0" />
          <Label fx:id="checking_acc_num" layoutX="97.0" layoutY="117.0" styleClass="account_number" text="4655" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="138.0" />
-         <VBox layoutX="205.0" layoutY="-20.0" prefHeight="100.0" prefWidth="35.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" />
-         <Text layoutX="14.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Cheking Account" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" />
+         <Text layoutX="14.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Sparkonto" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" />
          <styleClass>
             <String fx:value="account" />
             <String fx:value="account_gradient" />
@@ -32,8 +31,7 @@
          <Label fx:id="savings_bal" layoutX="24.0" layoutY="14.0" styleClass="account_balance" text="35 000,00 €" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="25.0" />
          <Label layoutX="14.0" layoutY="113.0" styleClass="account_number" text="**** **** ****" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="14.0" />
          <Label fx:id="savings_acc_num" layoutX="97.0" layoutY="117.0" styleClass="account_number" text="4655" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="138.0" />
-         <VBox layoutX="205.0" layoutY="-20.0" prefHeight="100.0" prefWidth="35.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" />
-         <Text layoutX="14.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Saving Account" AnchorPane.bottomAnchor="10.0390625" AnchorPane.leftAnchor="14.0" />
+         <Text layoutX="14.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="GiroKonto" AnchorPane.bottomAnchor="10.0390625" AnchorPane.leftAnchor="14.0" />
          <styleClass>
             <String fx:value="account" />
             <String fx:value="account_gradient" />
