--- a/src/main/resources/fxml/Client/TransactionCell.fxml
+++ b/src/main/resources/fxml/Client/TransactionCell.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="60.0" prefWidth="550.0" stylesheets="@../Styles/TransactionCell.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="60.0" prefWidth="550.0" stylesheets="@../Styles/TransactionCell.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <VBox prefHeight="50.0" prefWidth="50.0" styleClass="trans_icon_container" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="5.0">
         <Text fx:id="in_icon" strokeType="OUTSIDE" strokeWidth="0.0" text="----&gt;">
            <font>
@@ -24,5 +24,5 @@
     <Label fx:id="sender_lbl" layoutX="194.0" layoutY="22.0" styleClass="trans_pAddress_lbl" text="Josef" AnchorPane.leftAnchor="200.0" />
     <Label fx:id="receiver_lbl" layoutX="376.0" layoutY="23.0" styleClass="trans_pAddress_lbl" text="Harald" AnchorPane.leftAnchor="358.0" AnchorPane.topAnchor="22.0" />
     <Line endY="20.0" layoutX="275.0" layoutY="20.0" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="22.0" />
-    <Label fx:id="amount_lbl" layoutX="497.0" layoutY="22.0" styleClass="trans_amount_lbl" text="4€" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="22.0" />
+    <Label fx:id="amount_lbl" layoutX="510.0" layoutY="17.0" styleClass="trans_amount_lbl" text="4€" AnchorPane.rightAnchor="14.399999999999977" AnchorPane.topAnchor="17.0" />
 </AnchorPane>
